tests/ast_bad_old_varray_type.stderr
tests/ast_bad_old_varray_type.sl:27:28: error: expected type
