tests/ast_bad_old_varray_type.sl
fn main() i32 {
    var x [.n]u8
    return 0
}
